snapshots/care/data4life/hc-result-sdk-kmp/error/ecb7fdf/error-ecb7fdf.module.sha256
480d6d7fcb406480264262733866405c6caf55cc1501f9b994c8dee9bc7d715a